--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="page">
 			
 			<header>
-				<a class="logo" title="Everyday Things" href="#">Everyday Things</a>
+				<a class="logo" title="Everyday Things" href="#"></a>
 				<div class="hero">
 					<h1>Add interest with natural textures</h1>
 					<a class="btn" title="Get advice from top designers" href="#">Get advice from top designers</a>
@@ -23,21 +23,21 @@
 			<section class="main">
 
 				<aside>
-					<div class="content">
+					<div class="content trending">
 						<h3><a href="#">What&apos;s trending</a></h3>
 						<p>Lorem ipsum dolor sit amet, consect etuer adipiscing elit. <a href="http://codifydesign.com">Morbi commodo</a>, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis.</p>
 					</div>
 				</aside>
 
 				<aside>
-					<div class="content">
+					<div class="content find-it">
 						<h3><a href="#">Where to find it</a></h3>
 						<p>Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Lorem ipsum dolor sit amet, consect.</p>
 					</div>
 				</aside>
 
 				<aside>
-					<div class="content">
+					<div class="content tools">
 						<h3><a href="#">Tools of the trade</a></h3>
 						<p>Nullam sit amet enim. Lorem ipsum dolor sit amet, consect etuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci rhoncus neque, id pulvinar odio.</p>						
 					</div>
